# TDAP

./: .gitignore  TDAP.sln
TDAP/: AssemblyInfo.cpp  Core.cpp  Core.h  Form1.h  ReadMe.txt  Section.cpp  Section.h  TDAP.cpp  TDAP.vcxproj  TDAP.vcxproj.filters  Transformer.cpp  Transformer.h  Turn.cpp  Turn.h  Winding.cpp  Winding.h  frmConsole.cpp  frmConsole.h  frmContourPlot.cpp  frmContourPlot.h  gmshFile.cpp  gmshFile.h  gmshLine.cpp  gmshLine.h  gmshLineLoop.cpp  gmshLineLoop.h  gmshPoint.cpp  gmshPoint.h  stdafx.cpp  stdafx.h
TransFE/: ReadMe.txt  TransFE.vcxproj  TransFE.vcxproj.filters  algebraicsystem.cpp  algebraicsystem.h  assembler.h  constraint.h  discretesystem.cpp  discretesystem.h  displacementconstraint.cpp  displacementconstraint.h  dof.cpp  dof.h  elasticityanalysis.cpp  elasticityanalysis.h  elasticityfc.cpp  elasticityfc.h  elasticitysc.cpp  elasticitysc.h  feanalysis.cpp  feanalysis.h  feprog.cpp  feprog.h  forcecontributor.cpp  forcecontributor.h  lin1dsf.cpp  lin1dsf.h  linearsystemassembler.cpp  linearsystemassembler.h  linquadsf.cpp  linquadsf.h  lintetsf.cpp  lintetsf.h  lintrisf.cpp  lintrisf.h  magaxistaticanalysis.cpp  magaxistaticanalysis.h  magaxistaticfc.cpp  (+26 more)
TransFE/itl/: Makefile.am  Makefile.in  givens_rotation.h  itl.h  itl_config.h  matrix_free_operator.h
TransFE/itl/interface/: blas.h  blas_parallel.h  blitz.h  mtl.h  mtl_parallel.h
TransFE/itl/interface/detail/: blas_classical_gram_schmidt.h  mtl_classical_gram_schmidt.h
TransFE/itl/krylov/: gmres.h
TransFE/itl/preconditioner/: approximate_inverse.h  ilut.h  ssor.h
(+37 files in other folders)
