INCLUDES = -I$(top_srcdir)/src/mtl -I$(top_srcdir)/src/MeshDB $(all_includes)
METASOURCES = AUTO
noinst_HEADERS = givens_rotation.h Iteration_concept.h itl.h itl_config.h\
	itl_config.h.in itl_tags.h itl_utils.h Makefile.am Makefile.in\
	Matrix_concept.h matrix_free_operator.h modified_gram_schmidt.h\
	number_traits.h Preconditioner_concept.h stamp-h stamp-h.in
